--- a/renta_app_fe/src/App.css
+++ b/renta_app_fe/src/App.css
@@ -1,5 +1,6 @@
 *{
   font-family: 'Ubuntu', sans-serif;
+  /* font-family: 'Cinzel', serif; */
 }
 /* .appbackground{
   background-color: #eee6ff;
@@ -8,5 +9,9 @@
 } */
 .navbar{
   background-color: #8E44AD;
+}
+
+.h3{
+  font-family: 'Cinzel', serif;
 }
 
