--- a/renta_app_fe/src/App.css
+++ b/renta_app_fe/src/App.css
@@ -1,26 +1,46 @@
-*{
-  font-family: 'Ubuntu', sans-serif;
+* {
+  font-family: 'Quicksand', sans-serif;
   /* font-family: 'Cinzel', serif; */
 }
-.form-container{
+.nav-link {
+  font-family: 'Cinzel', serif;
+}
+
+.form-container {
   width: 40vw;
 }
+
 /* .appbackground{
   background-color: #eee6ff;
   height: 100vh;
   width: 100vw;
 } */
-.navbar{
-  background-color: #8E44AD;
+
+h1, h3, h4, h5 {
+  color: #003171;
 }
 
-.h3{
+.contact-form-container{
+  width: 60vw;
+}
+
+h3 {
   font-family: 'Cinzel', serif;
 }
 
 @media only screen and (max-width: 768px) {
-  .form-container{
+  .form-container {
     width: 90vw;
+  }
+  .pimg{
+    width: 95vw;
+    margin-bottom: 10px;
+    justify-content: center;
   }
 }
 
+@media only screen and (min-width: 768px) {
+  .profileDtls {
+    display: flex;
+  }
+}
